[package]
name = "netns_tcp_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
either = "1.7.0"
flume = { version = "0.10.14", default-features = false, features=["async"]}
gumdrop = "0.8.1"
nix = { version = "0.24.2", default-features = false, features = ["sched","socket","uio", "fs", "net"] }
tokio = { version = "1.20.1", features = ["net", "rt", "io-util"] }

[profile.release]
opt-level = "s"
debug = 1
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
panic = 'abort'
