[package]
name = "netns_tcp_bridge"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities", "network-programming"]
keywords = ["netns", "linux", "namespaces", "tcp", "forwarder"]
description = "Linux CLI tool to forward TCP connections from one network namespace to another network namespace"
repository = "https://github.com/vi/netns_tcp_bridge"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { version = "1.0.59" }
either = "1.7.0"
flume = { version = "0.10.14", default-features = false, features=["async"]}
gumdrop = "0.8.1"
nix = { version = "0.24.2", default-features = false, features = ["sched","socket","uio", "fs", "net"] }
tokio = { version = "1.20.1", features = ["net", "rt", "io-util"] }

[profile.release]
opt-level = "s"
debug = 1
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
panic = 'abort'
